finish data services and util methods